--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "A github api wrapper for quick and easy access or your github repositories",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [
     "api",
     "github-api"
@@ -14,6 +12,11 @@
   "author": "Carter S.",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.14.9"
+    "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.9",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5"
   }
 }
